fixed alignment on revenue dash

--- a/app/assets/stylesheets/users/revenues.scss
+++ b/app/assets/stylesheets/users/revenues.scss
@@ -28,7 +28,7 @@
   margin-top: 25px;
   margin-bottom: 10px;
   border-bottom: 0.2rem solid;
-  padding-bottom: 5px;
+  padding: 0px 20px 5px;
 
 }
 
